# zhlevel-resources

./: README.md  find_pinyin.py  get_spoonfed.py  pyproject.toml
_data/backup/: hsk.yaml
current/: hanzi.yaml  vocab.yaml
dev/: srs_create.py
dev/anki/: create.py  models.yaml
dev/hanzi/: create_from_junda.py  create_from_ref.py  create_from_spoonfed.py  generated.yaml  spoonfed.txt
dev/vocab/: create.py  generated.yaml
zhlevel/: anki.py  srs.py
